--- a/package.json
+++ b/package.json
@@ -16,13 +16,16 @@
     "@types/mongodb": "^4.0.7",
     "@types/node": "^20.11.16",
     "@types/signale": "^1.4.7",
+    "@types/uuid": "^9.0.8",
+    "class-validator": "^0.14.1",
     "dotenv": "^16.4.1",
     "express": "^4.18.2",
     "mongodb": "^6.3.0",
     "mysql2": "^3.9.1",
     "signale": "^1.4.0",
     "ts-node": "^10.9.2",
-    "typescript": "^5.3.3"
+    "typescript": "^5.3.3",
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
     "@types/mongoose": "^5.11.97"
