--- a/package.json
+++ b/package.json
@@ -11,17 +11,25 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/bcrypt": "^5.0.2",
     "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.21",
+    "@types/jsonwebtoken": "^9.0.5",
     "@types/mongodb": "^4.0.7",
+    "@types/morgan": "^1.9.9",
     "@types/node": "^20.11.16",
+    "@types/nodemailer": "^6.4.14",
     "@types/signale": "^1.4.7",
     "@types/uuid": "^9.0.8",
+    "bcrypt": "^5.1.1",
     "class-validator": "^0.14.1",
     "dotenv": "^16.4.1",
     "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.3.0",
+    "morgan": "^1.10.0",
     "mysql2": "^3.9.1",
+    "nodemailer": "^6.9.9",
     "signale": "^1.4.0",
     "ts-node": "^10.9.2",
     "typescript": "^5.3.3",
